[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 40.0
margin_top = 31.0
margin_right = 209.0
margin_bottom = 158.0
text = "LISTA"

[node name="Button2" type="Button" parent="."]
margin_left = 271.0
margin_top = 31.0
margin_right = 435.0
margin_bottom = 157.0
text = "SOMA DE DADOS"

[node name="Button3" type="Button" parent="."]
margin_left = 476.0
margin_top = 32.0
margin_right = 667.0
margin_bottom = 156.0
text = "ESTADO"

[node name="Button4" type="Button" parent="."]
margin_left = 724.0
margin_top = 36.0
margin_right = 892.0
margin_bottom = 160.0
text = "IDADE"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 47.0
margin_top = 182.0
margin_right = 208.0
margin_bottom = 323.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 5.0
margin_top = 6.0
margin_right = 153.0
margin_bottom = 142.0

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 276.0
margin_top = 307.0
margin_right = 437.0
margin_bottom = 448.0

[node name="resultado" type="RichTextLabel" parent="ColorRect2"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 7.0
margin_top = 3.0
margin_right = 155.0
margin_bottom = 139.0

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 489.0
margin_top = 181.0
margin_right = 650.0
margin_bottom = 322.0

[node name="resultado1" type="RichTextLabel" parent="ColorRect3"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 7.0
margin_top = 1.0
margin_right = 155.0
margin_bottom = 137.0

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 729.0
margin_top = 249.0
margin_right = 890.0
margin_bottom = 390.0

[node name="resultado2" type="RichTextLabel" parent="ColorRect4"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 5.0
margin_top = 4.0
margin_right = 153.0
margin_bottom = 140.0

[node name="dado1" type="LineEdit" parent="."]
margin_left = 295.0
margin_top = 184.0
margin_right = 404.0
margin_bottom = 220.0

[node name="dado2" type="LineEdit" parent="."]
margin_left = 295.0
margin_top = 232.0
margin_right = 403.0
margin_bottom = 269.0

[node name="idade" type="LineEdit" parent="."]
margin_left = 758.0
margin_top = 183.0
margin_right = 864.0
margin_bottom = 226.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
